package com.plcoding.cleanarchitecturenoteapp.core.util

object TestTags {

    const val ORDER_SELECTION = "ORDER_SELECTION"
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"
    const val NOTE_ITEM = "NOTE_ITEM"


}